<resources>
    <string name="app_name">NYTime Machine</string>
    <string name="toolbar_title">NYTime Machine</string>
    <string name="contentdescription_placeholder">Content description placeholder.</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="filter_sort_order">Sort Order</string>
    <string name="filter_begin_date">Begin Date</string>
    <string name="filter_news_desks">News Desks</string>
    <string name="news_desk_arts">Arts</string>
    <string name="news_desk_fashion_and_style">Fashion and Style</string>
    <string name="news_desk_sports">Sports</string>
    <string name="button_apply_filter">Apply</string>
    <string name="button_clear_filter">Clear</string>

    <string-array name="sort_order">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>
