<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/label_sort_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spinner_sort_order"
        android:text="@string/filter_sort_order"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_sort_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/sort_order"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_sort_order" />

    <TextView
        android:id="@+id/label_begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/edittext_date"
        android:text="@string/filter_begin_date"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sort_order" />

    <EditText
        android:id="@+id/edittext_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_begin_date" />

    <TextView
        android:id="@+id/label_news_desks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_news_desks"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_date" />

    <CheckBox
        android:id="@+id/checkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_news_desks" />

    <TextView
        android:id="@+id/label_checkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_arts"
        app:layout_constraintBottom_toBottomOf="@id/checkbox_arts"
        app:layout_constraintLeft_toRightOf="@id/checkbox_arts"
        app:layout_constraintTop_toTopOf="@id/checkbox_arts" />

    <CheckBox
        android:id="@+id/checkbox_fashion_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_arts" />

    <TextView
        android:id="@+id/label_checkbox_fashion_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_fashion_and_style"
        app:layout_constraintBottom_toBottomOf="@id/checkbox_fashion_style"
        app:layout_constraintLeft_toRightOf="@id/checkbox_fashion_style"
        app:layout_constraintTop_toTopOf="@id/checkbox_fashion_style" />

    <CheckBox
        android:id="@+id/checkbox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_fashion_style" />

    <TextView
        android:id="@+id/label_checkbox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_sports"
        app:layout_constraintBottom_toBottomOf="@id/checkbox_sports"
        app:layout_constraintLeft_toRightOf="@id/checkbox_sports"
        app:layout_constraintTop_toTopOf="@id/checkbox_sports" />

    <Button
        android:id="@+id/button_apply"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_apply_filter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_sports" />

    <Button
        android:id="@+id/button_cancel"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_filter"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_apply"
        app:layout_constraintTop_toBottomOf="@id/checkbox_sports" />
</android.support.constraint.ConstraintLayout>